--- a/Probability_Theory_and_Statistics_HW_1.ipynb
+++ b/Probability_Theory_and_Statistics_HW_1.ipynb
@@ -736,7 +736,7 @@
    "id": "73c9c34a",
    "metadata": {},
    "source": [
-    "ответ:\n",
+    "__ответ:__\n",
     "\n",
     "a) 0.5727644652250146\n",
     "\n",
@@ -766,7 +766,7 @@
    "id": "45bfadd8",
    "metadata": {},
    "source": [
-    "ответ: нет, эти события зависимые, т.к. кость бросается только один раз"
+    "__ответ:__ нет, эти события зависимые, т.к. наступление одного события изменяет вероятность наступления другого. Т.е. появление чётного числа повышает вероятность появления числа больше трёх, т.к. два из трёх чётных чисел больше трёх. "
    ]
   },
   {
@@ -796,7 +796,7 @@
    "id": "a3743045",
    "metadata": {},
    "source": [
-    "ответ: Т.к. тест является положительным, то уже нет никакой надобности принимать во внимание факт, что очень редкая болезнь поражает 0.1 % населения. Соответственно, вероятность того, что человек с положительным тестом болен = 0.99"
+    "__ответ:__ Т.к. тест является положительным, то уже нет никакой надобности принимать во внимание факт, что очень редкая болезнь поражает 0.1 % населения. Соответственно, вероятность того, что человек с положительным тестом болен = 0.99"
    ]
   },
   {
@@ -808,36 +808,55 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c20b8fc8",
+   "cell_type": "markdown",
+   "id": "36687965",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Дополнительные задания"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e3ba402",
+   "metadata": {},
+   "source": [
+    "__Задача 1__\n",
+    "\n",
+    "Подбрасываются три игральных кубика. Оцените вероятность того, что сумма значений этих кубиков не будет превышать 6.\n",
+    "\n",
+    "_Подсказка_: оценкой вероятности может служить, например, относительная частота при большом числе опытов. Попробуйте реализовать наибольшее число опытов, которое позволяют ваш компьютер и/или ваше терпение.\n",
+    "\n",
+    "_Замечание_: вообще в этом курсе мы не используем такие численные методы оценки вероятностей, и в будущем мы не будем их применять. Но тут сделаем исключение один раз."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd1349db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ca9a8272",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7eed06b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.092236\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1000000\n",
+    "\n",
+    "a = np.random.randint(1, 7, size=n)\n",
+    "b = np.random.randint(1, 7, size=n)\n",
+    "c = np.random.randint(1, 7, size=n)\n",
+    "\n",
+    "number_of_sums_not_above_6 = 0\n",
+    "for i in range(n):\n",
+    "    if a[i] + b[i] + c[i] <= 6:\n",
+    "        number_of_sums_not_above_6 += 1\n",
+    "\n",
+    "print(number_of_sums_not_above_6 / n)"
+   ]
   },
   {
    "cell_type": "code",
@@ -848,20 +867,22 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8d3ef68",
+   "cell_type": "markdown",
+   "id": "99e38122",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "__Задача 2__\n",
+    "\n",
+    "Бросается игральная кость. Пусть событие `A` - появление чётного числа, событие `B` - появление числа больше трёх. Являются ли эти события независимыми? Почему?"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc9c66f1",
+   "cell_type": "markdown",
+   "id": "39b3b8b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "__ответ:__ нет, эти события зависимые, т.к. наступление одного события изменяет вероятность наступления другого. Т.е. появление чётного числа повышает вероятность появления числа больше трёх, т.к. два из трёх чётных чисел больше трёх. "
+   ]
   },
   {
    "cell_type": "code",
