--- a/Probability_Theory_and_Statistics_HW_2.ipynb
+++ b/Probability_Theory_and_Statistics_HW_2.ipynb
@@ -56,15 +56,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b30f9ff1",
+   "id": "41e4f876",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "204c206c",
+   "execution_count": 1,
+   "id": "17bc8c6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,15 +74,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "272a4a01",
+   "id": "007e6326",
    "metadata": {},
    "source": [
-    "для решения нам понадобится формула Бернулли, создадим соответсвующую функцию:"
+    "для решения нам понадобится формула Бернулли:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30402ca6",
+   "metadata": {},
+   "source": [
+    "$$P(X = k) = C_n^k p^k (1 - p)^{n - k}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12dcfabc",
+   "metadata": {},
+   "source": [
+    "создадим соответсвующую функцию:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "7f2025cb",
    "metadata": {},
    "outputs": [],
@@ -92,12 +108,12 @@
     "    def combinations(n, k):\n",
     "        return np.math.factorial(n) // (np.math.factorial(k) * np.math.factorial(n - k))\n",
     "    \n",
-    "    return combinations(n, k) * (p ** k) * (1 - p) ** (n - k)"
+    "    return combinations(n, k) * (p ** k) * ((1 - p) ** (n - k))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6d3842e6",
+   "id": "6ae0c641",
    "metadata": {},
    "source": [
     "проверим, что сумма всех вероятностей равна 1:"
@@ -105,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "636647f7",
+   "execution_count": 3,
+   "id": "575b6a75",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +131,7 @@
        "1.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "9162918b",
+   "execution_count": 4,
+   "id": "b9214151",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +158,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf80d403",
+   "id": "5ad6c214",
    "metadata": {},
    "source": [
     "построим график распределения вероятностей случайной величины X:"
@@ -162,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "43b44cf6",
+   "execution_count": 5,
+   "id": "43136fce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "e201ff46",
+   "execution_count": 6,
+   "id": "b0140491",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +206,7 @@
        "  <rdf:RDF xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\r\n",
        "   <cc:Work>\r\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\r\n",
-       "    <dc:date>2022-02-16T22:45:59.810178</dc:date>\r\n",
+       "    <dc:date>2022-02-16T22:59:14.608509</dc:date>\r\n",
        "    <dc:format>image/svg+xml</dc:format>\r\n",
        "    <dc:creator>\r\n",
        "     <cc:Agent>\r\n",
@@ -224,7 +240,7 @@
        "   <g id=\"matplotlib.axis_1\">\r\n",
        "    <g id=\"xtick_1\">\r\n",
        "     <g id=\"line2d_1\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 45.379119 224.64 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 45.379119 224.64 \r\n",
        "L 45.379119 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -265,7 +281,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_2\">\r\n",
        "     <g id=\"line2d_3\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 106.251847 224.64 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 106.251847 224.64 \r\n",
        "L 106.251847 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -292,7 +308,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_3\">\r\n",
        "     <g id=\"line2d_5\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 167.124574 224.64 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 167.124574 224.64 \r\n",
        "L 167.124574 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -332,7 +348,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_4\">\r\n",
        "     <g id=\"line2d_7\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 227.997301 224.64 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 227.997301 224.64 \r\n",
        "L 227.997301 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -381,7 +397,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_5\">\r\n",
        "     <g id=\"line2d_9\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 288.870028 224.64 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 288.870028 224.64 \r\n",
        "L 288.870028 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -414,7 +430,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_6\">\r\n",
        "     <g id=\"line2d_11\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 349.742756 224.64 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 349.742756 224.64 \r\n",
        "L 349.742756 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -457,7 +473,7 @@
        "   <g id=\"matplotlib.axis_2\">\r\n",
        "    <g id=\"ytick_1\">\r\n",
        "     <g id=\"line2d_13\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 215.245653 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 215.245653 \r\n",
        "L 364.960938 215.245653 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -482,7 +498,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_2\">\r\n",
        "     <g id=\"line2d_15\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 190.194059 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 190.194059 \r\n",
        "L 364.960938 190.194059 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -499,7 +515,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_3\">\r\n",
        "     <g id=\"line2d_17\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 165.142466 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 165.142466 \r\n",
        "L 364.960938 165.142466 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -516,7 +532,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_4\">\r\n",
        "     <g id=\"line2d_19\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 140.090873 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 140.090873 \r\n",
        "L 364.960938 140.090873 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -533,7 +549,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_5\">\r\n",
        "     <g id=\"line2d_21\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 115.03928 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 115.03928 \r\n",
        "L 364.960938 115.03928 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -550,7 +566,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_6\">\r\n",
        "     <g id=\"line2d_23\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 89.987687 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 89.987687 \r\n",
        "L 364.960938 89.987687 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -567,7 +583,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_7\">\r\n",
        "     <g id=\"line2d_25\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 64.936094 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 64.936094 \r\n",
        "L 364.960938 64.936094 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -584,7 +600,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_8\">\r\n",
        "     <g id=\"line2d_27\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 39.8845 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 39.8845 \r\n",
        "L 364.960938 39.8845 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -601,7 +617,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_9\">\r\n",
        "     <g id=\"line2d_29\">\r\n",
-       "      <path clip-path=\"url(#pe1ec85385f)\" d=\"M 30.160938 14.832907 \r\n",
+       "      <path clip-path=\"url(#p4895260bce)\" d=\"M 30.160938 14.832907 \r\n",
        "L 364.960938 14.832907 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -618,7 +634,7 @@
        "    </g>\r\n",
        "   </g>\r\n",
        "   <g id=\"line2d_31\">\r\n",
-       "    <path clip-path=\"url(#pe1ec85385f)\" d=\"M 45.379119 96.348443 \r\n",
+       "    <path clip-path=\"url(#p4895260bce)\" d=\"M 45.379119 96.348443 \r\n",
        "L 106.251847 17.083636 \r\n",
        "L 167.124574 83.137642 \r\n",
        "L 227.997301 171.209649 \r\n",
@@ -649,7 +665,7 @@
        "  </g>\r\n",
        " </g>\r\n",
        " <defs>\r\n",
-       "  <clipPath id=\"pe1ec85385f\">\r\n",
+       "  <clipPath id=\"p4895260bce\">\r\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"30.160938\" y=\"7.2\"/>\r\n",
        "  </clipPath>\r\n",
        " </defs>\r\n",
@@ -670,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ccb4521",
+   "id": "98d43ee7",
    "metadata": {},
    "source": [
     "посчитаем математическое ожидание:"
@@ -678,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de24eddf",
+   "id": "53aba79f",
    "metadata": {},
    "source": [
     "$$M(X) = \\displaystyle\\sum_i p_i x_i = p_1 x_1 + p_2 x_2 + \\dots$$"
@@ -686,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d4bac976",
+   "execution_count": 7,
+   "id": "70eb880c",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +712,7 @@
        "1.25"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2171fe2",
+   "id": "95d3c4c3",
    "metadata": {},
    "source": [
     "посчитаем дисперсию:"
@@ -719,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a5ecc14",
+   "id": "11a22e7d",
    "metadata": {},
    "source": [
     "$$D(X) = M \\left( (X - M(X))^2 \\right).$$"
@@ -727,8 +743,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "14ae9dc7",
+   "execution_count": 8,
+   "id": "252dd398",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +753,7 @@
        "0.9375"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c200b79f",
+   "id": "5d85e14b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -768,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "838e5b96",
+   "id": "936c376d",
    "metadata": {},
    "source": [
     "для решения нам понадобится формула Пуассона:"
@@ -776,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c69af95",
+   "id": "3e512402",
    "metadata": {},
    "source": [
     "$$P(X = k) = \\dfrac{\\lambda^k e^{-\\lambda}}{k!}$$"
@@ -784,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eefb4822",
+   "id": "8240e6ea",
    "metadata": {},
    "source": [
     "создадим соответсвующую функцию:"
@@ -793,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5d10a113",
+   "id": "0d0a12ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "da503b96",
+   "id": "5a549daf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb0ef326",
+   "id": "a752577f",
    "metadata": {},
    "source": [
     "решим задачу путём увеличения числа N до получения требуемой суммы вероятностей:"
@@ -822,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a932c809",
+   "id": "7de0d9db",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24760e4b",
+   "id": "86c15398",
    "metadata": {},
    "source": [
     "#### ответ: 15"
@@ -870,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17e0d4dd",
+   "id": "9cd3dc56",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -891,14 +907,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ffe2a62",
+   "id": "8913785b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f508198b",
+   "id": "55e117fb",
    "metadata": {},
    "source": [
     "для того чтобы вероятность наступления 6-ти событий была равна 0.9, надо, чтобы вероятность каждого отдельного события была равна $\\sqrt[6]{0.9}$, т.к.:"
@@ -906,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2de3eced",
+   "id": "b7805361",
    "metadata": {},
    "source": [
     "$$x^6=0.9$$"
@@ -914,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036671da",
+   "id": "32e79b2b",
    "metadata": {},
    "source": [
     "вычислим вероятность каждого отдельного события:"
@@ -923,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7b9260db",
+   "id": "a64ee441",
    "metadata": {},
    "outputs": [
     {
@@ -938,12 +954,12 @@
     }
    ],
    "source": [
-    "pow(0.9, (1/6))"
+    "pow(0.9, (1 / 6))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c3b7eea",
+   "id": "0d82417f",
    "metadata": {},
    "source": [
     "проверим:"
@@ -952,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "84d8a100",
+   "id": "377798d1",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da378e46",
+   "id": "1fc22fa8",
    "metadata": {},
    "source": [
     "найдём количество выстрелов для достижения вероятности одного попадания с точностью 0.9825931938526898"
@@ -980,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed6c74b",
+   "id": "31c9d903",
    "metadata": {},
    "source": [
     "распределение в данном случае будет геометрическим:"
@@ -988,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf71e560",
+   "id": "bee72995",
    "metadata": {},
    "source": [
     "$$P(X = k) = (1 - p)^{k-1} \\cdot p$$"
@@ -997,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "07907886",
+   "id": "062e8928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cf83a030",
+   "id": "9a413a96",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5e9a90",
+   "id": "09b2193a",
    "metadata": {},
    "source": [
     "404 выстрелов надо для того, чтобы достичь вероятности попадания >= 0.9825931938526898"
@@ -1443,15 +1459,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5754231",
+   "id": "601a1b42",
    "metadata": {},
    "source": [
-    "соответственно, 488 * 6 = 2424 выстрелов надо для того, чтобы достичь вероятности = 0.9 для 6 попаданий"
+    "соответственно, 488 * 6 = 2424 выстрелов надо для того, чтобы достичь вероятности >= 0.9 для 6 попаданий"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9afb0c7b",
+   "id": "b8443eaf",
    "metadata": {},
    "source": [
     "#### ответ: 2424"
@@ -1460,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a2d802",
+   "id": "49451cb4",
    "metadata": {},
    "outputs": [],
    "source": []
