--- a/Probability_Theory_and_Statistics_HW_2.ipynb
+++ b/Probability_Theory_and_Statistics_HW_2.ipynb
@@ -178,20 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "43136fce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "plt.style.use('seaborn-whitegrid')\n",
-    "%config InlineBackend.figure_formats = ['svg']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b0140491",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +194,7 @@
        "  <rdf:RDF xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\r\n",
        "   <cc:Work>\r\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\r\n",
-       "    <dc:date>2022-02-17T09:00:02.161209</dc:date>\r\n",
+       "    <dc:date>2022-02-17T09:01:49.577860</dc:date>\r\n",
        "    <dc:format>image/svg+xml</dc:format>\r\n",
        "    <dc:creator>\r\n",
        "     <cc:Agent>\r\n",
@@ -240,7 +228,7 @@
        "   <g id=\"matplotlib.axis_1\">\r\n",
        "    <g id=\"xtick_1\">\r\n",
        "     <g id=\"line2d_1\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 45.379119 224.64 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 45.379119 224.64 \r\n",
        "L 45.379119 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -281,7 +269,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_2\">\r\n",
        "     <g id=\"line2d_3\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 106.251847 224.64 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 106.251847 224.64 \r\n",
        "L 106.251847 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -308,7 +296,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_3\">\r\n",
        "     <g id=\"line2d_5\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 167.124574 224.64 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 167.124574 224.64 \r\n",
        "L 167.124574 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -348,7 +336,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_4\">\r\n",
        "     <g id=\"line2d_7\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 227.997301 224.64 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 227.997301 224.64 \r\n",
        "L 227.997301 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -397,7 +385,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_5\">\r\n",
        "     <g id=\"line2d_9\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 288.870028 224.64 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 288.870028 224.64 \r\n",
        "L 288.870028 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -430,7 +418,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_6\">\r\n",
        "     <g id=\"line2d_11\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 349.742756 224.64 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 349.742756 224.64 \r\n",
        "L 349.742756 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -473,7 +461,7 @@
        "   <g id=\"matplotlib.axis_2\">\r\n",
        "    <g id=\"ytick_1\">\r\n",
        "     <g id=\"line2d_13\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 215.245653 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 215.245653 \r\n",
        "L 364.960938 215.245653 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -498,7 +486,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_2\">\r\n",
        "     <g id=\"line2d_15\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 190.194059 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 190.194059 \r\n",
        "L 364.960938 190.194059 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -515,7 +503,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_3\">\r\n",
        "     <g id=\"line2d_17\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 165.142466 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 165.142466 \r\n",
        "L 364.960938 165.142466 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -532,7 +520,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_4\">\r\n",
        "     <g id=\"line2d_19\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 140.090873 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 140.090873 \r\n",
        "L 364.960938 140.090873 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -549,7 +537,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_5\">\r\n",
        "     <g id=\"line2d_21\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 115.03928 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 115.03928 \r\n",
        "L 364.960938 115.03928 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -566,7 +554,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_6\">\r\n",
        "     <g id=\"line2d_23\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 89.987687 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 89.987687 \r\n",
        "L 364.960938 89.987687 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -583,7 +571,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_7\">\r\n",
        "     <g id=\"line2d_25\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 64.936094 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 64.936094 \r\n",
        "L 364.960938 64.936094 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -600,7 +588,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_8\">\r\n",
        "     <g id=\"line2d_27\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 39.8845 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 39.8845 \r\n",
        "L 364.960938 39.8845 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -617,7 +605,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_9\">\r\n",
        "     <g id=\"line2d_29\">\r\n",
-       "      <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 30.160938 14.832907 \r\n",
+       "      <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 30.160938 14.832907 \r\n",
        "L 364.960938 14.832907 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -634,7 +622,7 @@
        "    </g>\r\n",
        "   </g>\r\n",
        "   <g id=\"line2d_31\">\r\n",
-       "    <path clip-path=\"url(#pc2e42cc6d5)\" d=\"M 45.379119 96.348443 \r\n",
+       "    <path clip-path=\"url(#pb41fb7bc56)\" d=\"M 45.379119 96.348443 \r\n",
        "L 106.251847 17.083636 \r\n",
        "L 167.124574 83.137642 \r\n",
        "L 227.997301 171.209649 \r\n",
@@ -665,7 +653,7 @@
        "  </g>\r\n",
        " </g>\r\n",
        " <defs>\r\n",
-       "  <clipPath id=\"pc2e42cc6d5\">\r\n",
+       "  <clipPath id=\"pb41fb7bc56\">\r\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"30.160938\" y=\"7.2\"/>\r\n",
        "  </clipPath>\r\n",
        " </defs>\r\n",
@@ -680,6 +668,9 @@
     }
    ],
    "source": [
+    "from matplotlib import pyplot as plt\n",
+    "plt.style.use('seaborn-whitegrid')\n",
+    "# %config InlineBackend.figure_formats = ['svg']\n",
     "plt.plot(distribution)\n",
     "plt.show()"
    ]
