--- a/Probability_Theory_and_Statistics_HW_4.ipynb
+++ b/Probability_Theory_and_Statistics_HW_4.ipynb
@@ -177,7 +177,7 @@
    "id": "41897149",
    "metadata": {},
    "source": [
-    "$$D(A)=\\frac{(800-200)^2}{12}=\\frac{500^2}{12}$$"
+    "$$D(A)=\\frac{(800-200)^2}{12}=\\frac{600^2}{12}=30000$$"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "id": "15fda0f4",
    "metadata": {},
    "source": [
-    "ответ: среднее значение = 500, дисперсия = $\\frac{500^2}{12}$"
+    "ответ: среднее значение = 500, дисперсия = 30000"
    ]
   },
   {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daba68a9",
+   "id": "9a211777",
    "metadata": {},
    "source": [
     "вероятности в данном задании будут площади под отрезками кривой заданной формулой плотности непрерывной случайной величины  𝑋  с нормальным распределением:"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2fd3402",
+   "id": "a7daa734",
    "metadata": {},
    "source": [
     "$$f(x) = \\dfrac{1}{\\sqrt{2 \\pi \\sigma^2}} \\cdot \\exp \\left(- \\frac{(x - \\mu)^2}{2 \\sigma^2} \\right)$$"
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa10695",
+   "id": "1df2f42a",
    "metadata": {},
    "source": [
     "т.е. в случае __а)__ получается следующий определённый интеграл:"
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53b60bfc",
+   "id": "c762f388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,14 +926,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7c8454",
+   "id": "6e8c3bf0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "657c3106",
+   "id": "b9c7d418",
    "metadata": {},
    "source": [
     "так как известна дисперсия D(X) (или сигма в квадрате $\\sigma^2$), то среднеквадратическое отконение (или сигма $\\sigma$) будет корнем из дисперсии, т.е. $\\sqrt{25}=5$"
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ac3c7c",
+   "id": "3f48cdc4",
    "metadata": {},
    "source": [
     "тогда, зная расстояние между математическим ожиданием роста в популяции или M(X) = 178 и ростом некоего человека = 190, можно будет посчитать отклонение в сигмах от математического ожидания, которое будет равно равнице модулю разности между математическим ожиданием и ростом человека поделённому на значение среднеквадратического отклонения:"
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ab301f2",
+   "id": "f67a0463",
    "metadata": {},
    "source": [
     "$$\\frac{|M(X) - 190|}{\\sigma}=\\frac{|178 - 190|}{5}=\\frac{12}{5}=2.4$$"
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46721fb1",
+   "id": "55743712",
    "metadata": {},
    "source": [
     "ответ: $2.4\\cdot\\sigma$"
