--- a/Probability_Theory_and_Statistics_HW_6.ipynb
+++ b/Probability_Theory_and_Statistics_HW_6.ipynb
@@ -357,6 +357,137 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5b7f9b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4efb6ea",
+   "metadata": {},
+   "source": [
+    "__Задача 2__\n",
+    "\n",
+    "Проведите тест на значимость коэффициента корреляции Пирсона, найденного в предыдущей задаче. Что для этого нужно знать:\n",
+    "* Нулевая гипотеза: реальный коэффициент корреляции равен 0. Альтернативная гипотеза двухсторонняя.\n",
+    "* Статистика: `t = r * sqrt(n - 2) / sqrt(1 - r ** 2)`, где `r` - коэффициент корреляции Пирсона, посчитанный по выборке.\n",
+    "* В предположении верности нулевой гипотезы эта статистика имеет распределение Стьюдента с параметром `df = n - 2`.\n",
+    "\n",
+    "В качестве ответа запишите 1, если нулевая гипотеза верна, и 0 иначе."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a01e0b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5bce0b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3511b7eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.05\n",
+    "n = len(zp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19f69383",
+   "metadata": {},
+   "source": [
+    "найдём квантили:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ddeb8c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-2.306004135033371, 2.3060041350333704)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1 = stats.t.ppf(alpha / 2, df=n - 2)\n",
+    "t2 = stats.t.ppf(1 - alpha / 2, df=n - 2)\n",
+    "\n",
+    "t1, t2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7f52dca",
+   "metadata": {},
+   "source": [
+    "найдём значение статистики t:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7fb0c0e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.447168150485575"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = zp_ks_corr\n",
+    "t = r * np.sqrt(n - 2) / np.sqrt(1 - r ** 2)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "192e1080",
+   "metadata": {},
+   "source": [
+    "5.447168150485575 > 2.3060041350333704"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09b01113",
+   "metadata": {},
+   "source": [
+    "статистика попала в критическую область, нулевая гипотеза отвергается"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "148acc56",
    "metadata": {},
    "outputs": [],
@@ -367,7 +498,7 @@
    "id": "315e58b8",
    "metadata": {},
    "source": [
-    "__Задача 2__\n",
+    "__Задача 3__ \n",
     "\n",
     "Измерены значения IQ выборки студентов,\n",
     "обучающихся в местных технических вузах:\n",
@@ -388,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "fd626843",
    "metadata": {},
    "outputs": [],
@@ -398,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "d827446a",
    "metadata": {},
    "outputs": [],
@@ -408,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "05a6ea52",
    "metadata": {},
    "outputs": [],
@@ -438,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "32d24204",
    "metadata": {},
    "outputs": [
@@ -448,7 +579,7 @@
        "(-2.2621571627409915, 2.2621571627409915)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "5034f589",
    "metadata": {},
    "outputs": [
@@ -480,13 +611,42 @@
        "(110.55608365158724, 125.64391634841274)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(mean + t1 * std / np.sqrt(n), mean + t2 * std / np.sqrt(n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f3a273",
+   "metadata": {},
+   "source": [
+    "и его ширину:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2b0a9eec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.087832696825501"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(mean + t2 * std / np.sqrt(n)) - (mean + t1 * std / np.sqrt(n))"
    ]
   },
   {
@@ -502,7 +662,7 @@
    "id": "b329714d",
    "metadata": {},
    "source": [
-    "__Задача 3__\n",
+    "__Задача 4__\n",
     "\n",
     "Известно, что рост футболистов в сборной распределен нормально\n",
     "с дисперсией генеральной совокупности, равной 25 кв.см. Объем выборки равен 27,\n",
@@ -520,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "a464d79d",
    "metadata": {},
    "outputs": [],
@@ -551,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "85e0209a",
    "metadata": {},
    "outputs": [
@@ -561,7 +721,7 @@
        "(-1.959963984540054, 1.959963984540054)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "a6738d31",
    "metadata": {},
    "outputs": [
@@ -593,7 +753,7 @@
        "(172.3140237765397, 176.08597622346028)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,9 +763,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dff5593a",
+   "metadata": {},
+   "source": [
+    "и его ширину:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a63de2a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.7719524469205794"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(mean + t2 * std / np.sqrt(n)) - (mean + t1 * std / np.sqrt(n))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35e0378",
+   "id": "1ae43496",
    "metadata": {},
    "outputs": [],
    "source": []
