--- a/Probability_Theory_and_Statistics_HW_7.ipynb
+++ b/Probability_Theory_and_Statistics_HW_7.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "c45c4899",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "0435eab6",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "ede8bbfe",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "05f8cf6b",
    "metadata": {},
    "outputs": [],
@@ -147,8 +147,7 @@
     "\n",
     "        return ((samples - samples.mean()) ** 2).sum()\n",
     "    \n",
-    "    ones = np.ones((x.shape[0], 1))\n",
-    "    x = np.hstack([ones, x])\n",
+    "    x = np.hstack([np.ones((x.shape[0], 1)), x])\n",
     "    xtx = x.T.dot(x)\n",
     "    xtx_inv = np.linalg.inv(xtx)\n",
     "    b = xtx_inv.dot(x.T).dot(y)\n",
@@ -168,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "4456c2cb",
    "metadata": {},
    "outputs": [
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "d392ea5a",
    "metadata": {},
    "outputs": [
@@ -247,7 +246,7 @@
        "11.29443912292265"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "32a4739e",
    "metadata": {},
    "outputs": [
@@ -281,7 +280,7 @@
        "4.73741412777588"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,13 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "e4f416a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "x1 = np.zeros(2509)\n",
     "x1[np.arange(77)] = 1\n",
+    "\n",
     "x2 = np.zeros(1465)\n",
     "x2[np.arange(60)] = 1"
    ]
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "5a04ce57",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "0.006220171278295827"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,6 +370,7 @@
    "source": [
     "n1 = x1.size\n",
     "n2 = x2.size\n",
+    "\n",
     "s1 = x1.std(ddof=1)\n",
     "s2 = x2.std(ddof=1)\n",
     "\n",
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "ef312aac",
    "metadata": {},
    "outputs": [
@@ -397,7 +398,7 @@
        "-1.6504551408398205"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "18f4e928",
    "metadata": {},
    "outputs": [
@@ -427,7 +428,7 @@
        "2732.8025644352133"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "7f1f8301",
    "metadata": {},
    "outputs": [
@@ -457,7 +458,7 @@
        "(-1.9608324352746576, 1.9608324352746571)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
