--- a/Probability_Theory_and_Statistics_HW_8.ipynb
+++ b/Probability_Theory_and_Statistics_HW_8.ipynb
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_doubles(df_of_players):\n",
+    "def remove_doubles_and_transform_into_height_array(df_of_players):\n",
     "    \n",
     "    doubles = df_of_players['name'].value_counts()[df_of_players['name'].value_counts() > 1].index\n",
     "    \n",
@@ -274,9 +274,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y1 = remove_doubles(df[df['country'] == 'FIN'].copy())\n",
-    "y2 = remove_doubles(df[df['country'] == 'NOR'].copy())\n",
-    "y3 = remove_doubles(df[df['country'] == 'DEN'].copy())"
+    "y1 = remove_doubles_and_transform_into_height_array(df[df['country'] == 'FIN'].copy())\n",
+    "y2 = remove_doubles_and_transform_into_height_array(df[df['country'] == 'NOR'].copy())\n",
+    "y3 = remove_doubles_and_transform_into_height_array(df[df['country'] == 'DEN'].copy())"
    ]
   },
   {
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PolyCollection at 0x16ce4857f70>"
+       "<matplotlib.collections.PolyCollection at 0x22ad58570a0>"
       ]
      },
      "execution_count": 13,
@@ -571,7 +571,7 @@
        "  <rdf:RDF xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\r\n",
        "   <cc:Work>\r\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\r\n",
-       "    <dc:date>2022-04-24T22:19:29.645962</dc:date>\r\n",
+       "    <dc:date>2022-04-24T22:24:46.197168</dc:date>\r\n",
        "    <dc:format>image/svg+xml</dc:format>\r\n",
        "    <dc:creator>\r\n",
        "     <cc:Agent>\r\n",
@@ -605,7 +605,7 @@
        "   <g id=\"matplotlib.axis_1\">\r\n",
        "    <g id=\"xtick_1\">\r\n",
        "     <g id=\"line2d_1\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 39.818182 224.64 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 39.818182 224.64 \r\n",
        "L 39.818182 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -646,7 +646,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_2\">\r\n",
        "     <g id=\"line2d_3\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 90.545455 224.64 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 90.545455 224.64 \r\n",
        "L 90.545455 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -673,7 +673,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_3\">\r\n",
        "     <g id=\"line2d_5\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 141.272727 224.64 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 141.272727 224.64 \r\n",
        "L 141.272727 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -713,7 +713,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_4\">\r\n",
        "     <g id=\"line2d_7\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 192 224.64 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 192 224.64 \r\n",
        "L 192 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -762,7 +762,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_5\">\r\n",
        "     <g id=\"line2d_9\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 242.727273 224.64 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 242.727273 224.64 \r\n",
        "L 242.727273 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -795,7 +795,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_6\">\r\n",
        "     <g id=\"line2d_11\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 293.454545 224.64 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 293.454545 224.64 \r\n",
        "L 293.454545 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -836,7 +836,7 @@
        "    </g>\r\n",
        "    <g id=\"xtick_7\">\r\n",
        "     <g id=\"line2d_13\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 344.181818 224.64 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 344.181818 224.64 \r\n",
        "L 344.181818 7.2 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -887,7 +887,7 @@
        "   <g id=\"matplotlib.axis_2\">\r\n",
        "    <g id=\"ytick_1\">\r\n",
        "     <g id=\"line2d_15\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 24.6 214.756364 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 24.6 214.756364 \r\n",
        "L 359.4 214.756364 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -911,7 +911,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_2\">\r\n",
        "     <g id=\"line2d_17\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 24.6 175.221818 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 24.6 175.221818 \r\n",
        "L 359.4 175.221818 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -927,7 +927,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_3\">\r\n",
        "     <g id=\"line2d_19\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 24.6 135.687273 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 24.6 135.687273 \r\n",
        "L 359.4 135.687273 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -943,7 +943,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_4\">\r\n",
        "     <g id=\"line2d_21\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 24.6 96.152727 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 24.6 96.152727 \r\n",
        "L 359.4 96.152727 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -959,7 +959,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_5\">\r\n",
        "     <g id=\"line2d_23\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 24.6 56.618182 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 24.6 56.618182 \r\n",
        "L 359.4 56.618182 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -1017,7 +1017,7 @@
        "    </g>\r\n",
        "    <g id=\"ytick_6\">\r\n",
        "     <g id=\"line2d_25\">\r\n",
-       "      <path clip-path=\"url(#p295c8acc8e)\" d=\"M 24.6 17.083636 \r\n",
+       "      <path clip-path=\"url(#p5226c6b042)\" d=\"M 24.6 17.083636 \r\n",
        "L 359.4 17.083636 \r\n",
        "\" style=\"fill:none;stroke:#cccccc;stroke-linecap:round;stroke-width:0.8;\"/>\r\n",
        "     </g>\r\n",
@@ -1033,7 +1033,7 @@
        "    </g>\r\n",
        "   </g>\r\n",
        "   <g id=\"PolyCollection_1\">\r\n",
-       "    <path clip-path=\"url(#p295c8acc8e)\" d=\"M 192.854667 214.756364 \r\n",
+       "    <path clip-path=\"url(#p5226c6b042)\" d=\"M 192.854667 214.756364 \r\n",
        "L 192.854667 205.010441 \r\n",
        "L 194.383224 205.297059 \r\n",
        "L 195.911781 205.575209 \r\n",
@@ -1239,7 +1239,7 @@
        "\" style=\"fill:#1f77b4;fill-opacity:0.5;\"/>\r\n",
        "   </g>\r\n",
        "   <g id=\"line2d_27\">\r\n",
-       "    <path clip-path=\"url(#p295c8acc8e)\" d=\"M 39.818182 17.083636 \r\n",
+       "    <path clip-path=\"url(#p5226c6b042)\" d=\"M 39.818182 17.083636 \r\n",
        "L 43.477865 30.902208 \r\n",
        "L 47.137548 43.750588 \r\n",
        "L 50.797231 55.697187 \r\n",
@@ -1311,7 +1311,7 @@
        "  </g>\r\n",
        " </g>\r\n",
        " <defs>\r\n",
-       "  <clipPath id=\"p295c8acc8e\">\r\n",
+       "  <clipPath id=\"p5226c6b042\">\r\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"24.6\" y=\"7.2\"/>\r\n",
        "  </clipPath>\r\n",
        " </defs>\r\n",
